[tool.poetry]
name = "meross"
version = "0.1.0"
description = "Meross IoT for home"
authors = ["Fooser <fooser@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
meross_iot = "0.4.0.2"
aiohttp = "^3.6.2"
pymongo = "^3.11.0"
tinydb = "^4.1.1"
prometheus_client = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
